# bootcamp-ockm

./: .gitignore  CLAUDE.md  README.md
aulao-1-ia-em-producao/: README.md
aulao-1-ia-em-producao/agente-monitoramento/: .env-exemplo  Dockerfile  Makefile  README.md  pyproject.toml
aulao-1-ia-em-producao/agente-monitoramento/config/: settings.py
aulao-1-ia-em-producao/agente-monitoramento/config/prompts/: registry.py
aulao-1-ia-em-producao/agente-monitoramento/observability/: logger.py  metrics.py  tracer.py
aulao-1-ia-em-producao/agente-monitoramento/pipeline/: alerter.py  anomaly.py  classifier.py  engine.py  extractor.py  rag.py  risk.py  root_cause.py
aulao-1-ia-em-producao/agente-monitoramento/protocols/: alert_sink.py  embeddings.py  llm.py  storage.py  vector_store.py
aulao-1-ia-em-producao/agente-monitoramento/providers/: anthropic_llm.py  bigquery_store.py  dummy_llm.py  faiss_store.py  local_embeddings.py  openai_llm.py  slack_sink.py  terminal_sink.py
aulao-1-ia-em-producao/agente-monitoramento/rag_data/changelogs/: deploy_2025_02.md
aulao-1-ia-em-producao/agente-monitoramento/rag_data/postmortems/: 2024_12_outage.md
aulao-1-ia-em-producao/agente-monitoramento/schemas/: alerts.py  events.py  llm_responses.py  observability.py
aulao-1-ia-em-producao/agente-monitoramento/scripts/: create_schema.py  generate_events.py  run_continuous.py  run_demo.py  run_pipeline_once.py  seed_bigquery.py  seed_rag.py
aulao-1-ia-em-producao/agente-monitoramento/tests/: conftest.py  test_anomaly.py  test_classifier.py  test_pipeline_e2e.py  test_rag.py
(+76 files in other folders)
